--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -25,7 +25,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.2",
     "pdfkit": "^0.17.1"
   },
